Backend/api-backend/overlays/development/limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend
spec:
  template:
    spec:
      containers:
      - name: api-backend
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 120m
            memory: 150Mi
