Backend/api-backend/overlays/development/tolerations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend
spec:
  template:
    spec:
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "dev"
          effect: "NoSchedule"
