Backend/api-backend/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-internal
  creationTimestamp: null
  name: api-backend-ingress
spec:
  rules:
  - host: api-backend.svc.dev.occ
    http:
      paths:
      - backend:
          service:
            name: api-backend-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
